# PBP

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_AUFTRAG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEINSTALLIEREN.bat  DOKUMENTATION.md  Dashboard starten.bat  Dashboard starten.command  INSTALLIEREN.bat  INSTALLIEREN.command  OPTIMIERUNGEN.md  README.md  SECURITY.md  TESTVERSION.md  ZUSTAND.md  _setup_claude.py  deinstall_log.txt  hints.json  package.json  pnpm-lock.yaml  pyproject.toml  release_check.py  start_dashboard.py  switch_mode.py  test_demo.py
.claude/: launch.json  settings.local.json
.github/: FUNDING.yml  pull_request_template.md
PBP-0.16.5/: .gitignore  AGENTS.md  CHANGELOG.md  DOKUMENTATION.md  Dashboard starten.bat  INSTALLIEREN.bat  LICENSE  OPTIMIERUNGEN.md  README.md  TESTVERSION.md  ZUSTAND.md  _selftest.py  _setup_claude.py  pyproject.toml  start_dashboard.py  test_demo.py
docs/: CLAUDE_CODE_KICKSTART.md  CODEX_ANALYSE.md  CODEX_CLAUDE_FRONTEND_HANDOFF.md  CODEX_CLAUDE_HANDOFF.md  CODEX_CLAUDE_TAGESIMPULSE_HANDOFF.md  FAQ.md  FRONTEND_RECOVERY_v022_to_v025.md  ISSUE_TEMPLATE_CHAT.md  RELEASE_INSTALL_TEMPLATE.md  RELEASE_READINESS_v0.30.0.md  RELEASE_READINESS_v0.32.2.md  RELEASE_REVIEW_v0.14.0.md  RELEASE_v1.0.0_DRAFT.md  ROADMAP_v1.7.0.md  STABILISIERUNG_AUDIT_v0321.md  TAGESIMPULSE_IMPLEMENTIERUNGSPLAN.md  TAGESIMPULSE_SEED.md  UMSETZUNGSPLAN_v0.26.0.md  V1_6_0_PLAN.md  VERBESSERUNGSPLAN.md  WORKING_FEATURES.md  architecture.md  codex_context.md  dependency_on_elwosa.md
frontend/: dev-preview.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
installer/: build_setup_exe.bat  deinstallieren.sh  install.ps1  install.sh  setup_gui.py
scripts/: dev-api.mjs  dev-web.mjs  smoke_test.py
tests/: conftest.py  test_browser_config.py  test_capabilities_grenze.py  test_daily_impulse_service.py  test_dashboard.py  test_dashboard_browser.py  test_database.py  test_document_analysis_prompts.py  test_duplicate_detection.py  test_email_service.py  test_export.py  test_followup_lifecycle.py  test_mcp_registry.py  test_merge_jobs.py  test_profile_service.py  test_release_hygiene.py  test_scoring.py  test_scraper_adapter_v2.py  test_scrapers.py  test_search_service.py  test_stellen_bulk_bewerten.py  test_v010.py  test_v013.py  test_v020.py  test_v032_regressions.py  test_v120_simulations.py  test_v154_writeback.py  test_v157_flow_completion.py  test_v164_bugfixes.py  test_v165_drift_fixes.py  test_v165_quickfixes.py  test_v166_bericht.py  test_v167_quickfixes.py  test_v169_hash_datum.py  test_v170_beta10.py  test_v170_beta11.py  test_v170_beta12.py  (+14 more)
(+297 files in other folders)
