[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bewerbungs-assistent"
version = "0.10.3"
description = "KI-gestützter Bewerbungsassistent — MCP Server für Claude Desktop"
readme = {text = "KI-gestuetzter Bewerbungsassistent als MCP Server fuer Claude Desktop", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Markus Birzite" }
]
keywords = ["mcp", "claude", "bewerbung", "job-search", "career"]

dependencies = [
    "fastmcp>=2.0",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
scraper = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]
docs = [
    "python-docx>=1.1",
    "pypdf>=4.0",
    "fpdf2>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
all = [
    "bewerbungs-assistent[scraper,docs]",
]

[project.scripts]
bewerbungs-assistent = "bewerbungs_assistent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bewerbungs_assistent"]
