[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bewerbungs-assistent"
version = "1.6.0-beta.15"
description = "KI-gestützter Bewerbungsassistent — MCP Server für Claude Desktop"
readme = {text = "KI-gestützter Bewerbungsassistent als MCP Server für Claude Desktop", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Markus Birzite" }
]
keywords = ["mcp", "claude", "bewerbung", "job-search", "career"]

dependencies = [
    "fastmcp>=2.0",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "geopy>=2.4",
]

[project.optional-dependencies]
scraper = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-jobspy>=1.1",
]
docs = [
    "python-docx>=1.1",
    "pypdf>=4.0",
    "fpdf2>=2.7",
    "matplotlib>=3.8",
]
export = [
    "openpyxl>=3.1",
]
email = [
    "extract-msg>=0.48",
    "icalendar>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
all = [
    "bewerbungs-assistent[scraper,docs,export,email]",
]

[project.scripts]
bewerbungs-assistent = "bewerbungs_assistent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bewerbungs_assistent"]

[tool.pytest.ini_options]
# test_demo.py im Projekt-Root ist ein Dashboard-Launcher-Script, kein Pytest-Test.
# Ohne testpaths wuerde pytest es einsammeln und beim Start des Uvicorn-Servers haengen.
testpaths = ["tests"]
